syntax = "proto3";

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
  rpc GetProducts (GetProductsRequest) returns (GetProductsResponse);
  rpc GetProduct (GetProductRequest) returns (GetProductResponse); // Assurez-vous que cette ligne est pr√©sente
  rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
}

message Product {
  int32 id = 1;
  string name = 2;
  float price = 3;
}

message CreateProductRequest {
  string name = 1;
  float price = 2;
}

message CreateProductResponse {
  string message = 1;
  Product product = 2;
}

message GetProductsRequest {}

message GetProductsResponse {
  repeated Product products = 1;
}

message GetProductRequest {
  int32 productId = 1;



























  
}

message GetProductResponse {
  Product product = 1;
}

message UpdateProductRequest {
  int32 productId = 1;
  string name = 2;
  float price = 3;
}

message UpdateProductResponse {
  Product product = 1;
}

message DeleteProductRequest {
  int32 productId = 1;
}

message DeleteProductResponse {
  string message = 1;
}
